changed html download to general files, modified datamodel

--- a/doku/spec/spec01-overview.tex
+++ b/doku/spec/spec01-overview.tex
@@ -1,12 +1,12 @@
 \chapter{Übersicht}
-Über einen konfigurierbaren Crawler können HTML-Inhalte von Webseiten bis zu einer bestimmten Tiefe
-aus dem Netz in ein Archiv geladen werden. Da dies parallelisiert erfolgen soll,
+Über einen konfigurierbaren Crawler können Inhalte von Webseiten bis zu einer bestimmten Tiefe
+aus dem Internet in ein Archiv geladen werden. Da dies parallelisiert erfolgen soll,
 müssen die Daten nach dem Herunterladen von temporären Verzeichnissen in das gemeinsame
-Archivverzeichnis synchronisiert werden. Der aus der URL extrahierte Pfad der HTML-Dateien wird
-dabei auf das Archiv abgebildet, wobei jede HTML-Datei in einen eigenen Archivordner verschoben wird.\\
+Archivverzeichnis synchronisiert werden. Der aus der URL extrahierte Pfad der Dateien wird
+dabei auf das Archiv abgebildet, wobei jede Datei in einen eigenen Archivordner verschoben wird.\\
 
-Beim Crawlvorgang werden zusätzlich Metadaten der HTML-Seiten erstellt. 
-Diese werden in einer Datenbank und als XML-Datei im jeweiligen HTML-Ordner gespeichert.
+Beim Crawlvorgang werden zusätzlich Metadaten der heruntergeladenen Dateien erstellt. 
+Diese werden in einer Datenbank und als XML-Datei im jeweiligen Archivordner gespeichert.
 Die Datenbank soll dabei wieder aus den XML-Daten rekonstruierbar sein. \\ 
 
 Außerdem sollen Filter eingehängt werden können, die bereits in den TMP-Ordnern ungültige Dateien löschen.
