domain@date -> date@domain

--- a/doku/spec/spec02-datamodel.tex
+++ b/doku/spec/spec02-datamodel.tex
@@ -31,7 +31,7 @@ Die Metadaten sollen vor allen Dingen Such- und Sortieraufgaben erleichtern.
 	 			& 		 				& in der Versionsverwaltung. \\ 
 				& 						& Der Tag setzt sich aus domain und crawlTime zusammen.\\
 				&  						& Form: \\
-				&  						& commitTag := $<$domainName$>@<$crawlTime$>$ \\
+				&  						& commitTag := $<$crawlTime$>@<$domainName$>$ \\
 	\hline
 \end{tabular}
 \caption{Metadaten}
