changed MetaData.java, edited spec: MimeFilter

--- a/doku/spec/spec03-requirements.tex
+++ b/doku/spec/spec03-requirements.tex
@@ -167,8 +167,8 @@ und die Daten in das Archiv schreiben.
 			\item [\subreq{Excludes}{excludes}]
 				Es kann eine Liste von MIME-Types angegeben werden, die verworfen werden sollen. 
 			\item [\subreq{Pattern}{pattern}]
-				Es kann eine Liste von regulären Ausdrücken übergeben werden, mit denen der
-				MIME-Type der Datei verglichen wird.
+				Mit dem '*'-Zeichen können Pattern für includes und excludes gebildet werden. 
+				So ist es z.B. möglich alle MIME-Types oder alle eines Primärtypen auszuwählen.
 		\end{description}
 \end{description}
 
