removed old create.sql-files, added components.dia

--- a/doku/spec/spec01-overview.tex
+++ b/doku/spec/spec01-overview.tex
@@ -23,7 +23,7 @@ Zu Vorführzwecken wird ein Testanalysetool erstellt.
 \begin{figure}
 	\centering
 	\label{spec:dia:moduls}
-	\includegraphics[width=\textwidth]{spec/webarchiv_design.pdf}
+	\includegraphics[width=\textwidth]{spec/components.eps}
 	\caption{Diagramm: Grundlegendes Design}
 \end{figure}
  
