--- a/doku/dokumentation.tex
+++ b/doku/dokumentation.tex
@@ -72,5 +72,7 @@ Sabrina Biersack \\
 \input{./spec/spec02-datamodel.tex}
 \input{./spec/spec03-requirements.tex}
 \input{./spec/spec04-development.tex}
+\part{Entwurf}
+\input{./entwurf/backend.tex}
 \end{document}
 
