--- a/doku/entwurf/backend.tex
+++ b/doku/entwurf/backend.tex
@@ -10,10 +10,8 @@ Das Backend bezieht sich auf den in Python geschriebenen Teil, welcher öffentli
 \label{sub:confighandler}
 Dieser wird zum Lesen und Setzen der Konfigurationswerte verwendet. Die Konfigurationsdatei ist in 
 Xml geschreiben und hat folgenden Aufbau:
-\begin{figure}
-\label[lst:config]
-\lstinputlisting{../../conf/webarchive.conf.xml}
-\end{figure}
+
+\lstinputlisting[language=XML,basicstyle=\ttfamily\fontsize{8}{10}\selectfont]{../../conf/webarchive.conf.xml}
 
 % subsection confighandler (end)
 \subsection{Commandline Interface}
