Did some sirius cleanup-busyness

--- a/doku/dokumentation.tex
+++ b/doku/dokumentation.tex
@@ -22,7 +22,9 @@
 \setcounter{secnumdepth}{3} %Numerierung bis Tiefe 3, also ab \paragraph ohne
 
 % *** java listings
-\usepackage{listings} 
+\usepackage{xcolor,luximono,listings}
+\usepackage{listings}
+\lstloadlanguages{PYTHON,SQL,XML,JAVA}
 \usepackage{courier} % courier schrift
 \lstset{
 	language=Java, 
