--- a/doku/dokumentation.tex
+++ b/doku/dokumentation.tex
@@ -76,7 +76,7 @@ Beteiligte Studenten: \\
 \input{./spec/spec04-development.tex}
 \part{Entwurf}
 \input{./design/data/data.tex}
-\input{./design/backend.tex}
+\input{./design/backend/backend.tex}
 \input{./design/frontend/frontend.tex}
 \end{document}
 
